--- a/asentus/HTML/css/layout-rtl.css
+++ b/asentus/HTML/css/layout-rtl.css
@@ -2,15 +2,16 @@
 
 	MASTER STYLESHEET
 
-	Project:        Metronic "Acidus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-	Version:        1.0
-	Author:         KeenThemes
-	Primary use:    Corporate, Business Themes.
-	Email:			support@keenthemes.com
-	Follow: 		http://www.twitter.com/keenthemes
-	Like: 			http://www.facebook.com/keenthemes
-	Website:		http://www.keenthemes.com
-	Premium:		Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+<!-- ==============================
+    プロジェクト:       Bilier テーマ - レスポンシブ HTML テンプレート Based On Twitter Bootstrap 3.3.4
+    バージョン:         1.0
+    制作者:             SmartGenz Group
+    利用用途:           不動産サイト、コーポレートサイト
+    メールアドレス:      arenpadorina@smartgenz.com
+    インスタグラム:      https://www.instagram.com/smartgenz_group/
+    フェースブック:      https://www.facebook.com/profile.php?id=100085283557633
+    ウェブサイト:        https://smartgenz.com/
+================================== -->
 
 -----------------------------------------------------------------------*/
 /* eg: @include user-select(none); */
