business finance template arrange

--- a/daymy/assets/css/templatemo-tale-seo-agency.css
+++ b/daymy/assets/css/templatemo-tale-seo-agency.css
@@ -2,7 +2,7 @@
 
 TemplateMo 582 Tale SEO Agency
 
-https://templatemo.com/tm-582-tale-seo-agency
+https://smartgenz.com//tm-582-tale-seo-agency
 
 */
 
