--- a/nix/assets/css/templatemo-onix-digital.css
+++ b/nix/assets/css/templatemo-onix-digital.css
@@ -2,7 +2,7 @@
 
 TemplateMo 565 Onix Digital
 
-https://templatemo.com/tm-565-onix-digital
+https://smartgenz.com//tm-565-onix-digital
 
 
 ------------------------------------------------
