--- a/business_finance/assets/css/templatemo-finance-business.css
+++ b/business_finance/assets/css/templatemo-finance-business.css
@@ -1,8 +1,8 @@
 /* 
 
-TemplateMo - Finance Business
+SmartGenz - Finance Business
 
-https://templatemo.com/tm-545-finance-business
+https://smartgenz.com/ 
 
 */
 
@@ -446,6 +446,7 @@ ul.slick-dots {
   	position: absolute;
   	top: 50%;
   	left: 50%;
+	margin-top: 60px;
   	transform: translate(-50%, -50%);
 }
 
@@ -1075,6 +1076,9 @@ footer .contact-form button.filled-button:hover {
 	letter-spacing: 1px;
 	color: #fff;
 	display: block;
+	max-width: 700px;
+	text-align: left;
+	margin: auto;
 }
 
 
