--- a/daymy/assets/css/templatemo-tale-seo-agency.css
+++ b/daymy/assets/css/templatemo-tale-seo-agency.css
@@ -1,6 +1,6 @@
 /*
 
-TemplateMo 582 Tale SEO Agency
+SmartGenz Template
 
 https://smartgenz.com//tm-582-tale-seo-agency
 
@@ -862,7 +862,7 @@ Banner Style
 }
 
 .main-banner h4 {
-  font-size: 52px;
+  font-size: 46px;
   color: #2a2a2a;
   font-weight: 700;
   line-height: 70px;
@@ -989,7 +989,7 @@ Projects Style
 }
 
 .projects .item .down-content h4 {
-  font-size: 20px;
+  font-size: 18px;
   color: #2a2a2a;
   line-height: 30px;
   width: 75%;
