--- a/business_finance/assets/css/templatemo-finance-business.css
+++ b/business_finance/assets/css/templatemo-finance-business.css
@@ -387,7 +387,7 @@ header .navbar {
 }
 
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/slide_01.jpg);
+	background-image: url(../images/slide_01.png);
 }
 
 .Modern-Slider .item-2 .img-fill {
@@ -395,7 +395,7 @@ header .navbar {
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/slide_03.png);
 }
 
 .Modern-Slider .NextArrow{
